--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.6",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
