--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.6",
     "react-native-safe-area-context": "^4.8.2",
+    "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.10",
     "styled-components": "^6.1.8"
   },
